<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory
		android:title="@string/generic">

		<ListPreference
			android:title="@string/theme_title"
			android:key="@string/theme_key"
			android:summary="@string/theme_summary"
			android:entries="@array/theme_entry"
			android:entryValues="@array/theme_entry_value"
			android:defaultValue="light"/>

		<EditTextPreference
			android:title="@string/api_title"
			android:key="@string/api_key"
			android:summary="@string/api_summary"
			android:defaultValue="15"
			android:inputType="number"
			android:dialogTitle="@string/api_dialogTitle" />
		
		<EditTextPreference
			android:title="@string/framework_title"
			android:key="@string/framework"
			android:summary="@string/framework_summary" />
		
		<com.a4455jkjh.apktool.preference.InstallSystemFrameworkPreference
			android:title="安装系统框架"
			android:key="install_system_framework"
			android:summary="点击安装系统框架"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/sign">

		<CheckBoxPreference
			android:title="@string/v2sign_title"
			android:key="@string/v2sign_key"
			android:summary="@string/v2sign_summary"
			android:defaultValue="true"/>
		
		<CheckBoxPreference
			android:title="@string/custom_key_title"
			android:key="@string/custom_key"
			android:summary="@string/custom_key_summary"
			android:defaultValue="false"/>
		
		<com.a4455jkjh.apktool.preference.KeystorePreference
			android:title="@string/keystore_title"
			android:key="@string/keystore_key"
			android:summary="@string/keystore_summary"/>
		
		<com.a4455jkjh.apktool.preference.GenKeystorePreference
			android:title="@string/gen_key_title"
			android:key="gen_key"
			android:summary="@string/gen_key_summary"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/decode">

		<CheckBoxPreference
			android:title="@string/no_debug_title"
			android:key="@string/no_debug_key"
			android:summary="@string/no_debug_summary"/>

		<CheckBoxPreference
			android:title="@string/keep_broken_title"
			android:key="@string/keep_broken_key"
			android:summary="@string/keep_broken_summary"/>

    </PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/encode">
		
		<CheckBoxPreference
			android:title="@string/debug_title"
			android:key="@string/debug_key"
			android:summary="@string/debug_summary"/>
		
		<CheckBoxPreference
			android:title="@string/verbose_title"
			android:key="@string/verbose_key"
			android:summary="@string/verbose_summary"/>
		
	</PreferenceCategory>
</PreferenceScreen>
